# m3_b5

./: README.md
bag_assistant/: Dockerfile  compose.yaml  pyproject.toml
bag_assistant/app/: main.py
bag_assistant/app/schemas/: models.py
bag_assistant/app/services/: llm.py
