[project]
name = "bag-assistant-api"
version = "0.1.0"
description = "FastAPI-сервис для LLM диплома (BAG_ASSISTANT)"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "uvicorn[standard]>=0.29",
    "openai>=1.40",
    "redis>=5.0",
    "tenacity>=8.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
